# sci-compiler

./: .bazelrc  .clang-tidy  .clangd  .gitignore  .gitmodules  .markdownlint.yaml  ALIST.CPP  ALIST.HPP  ANODE.CPP  BANNER.CPP  BUILD.bazel  BUILTINS.CPP  BUILTINS.HPP  CLASS.CPP  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILE.CPP  COMPILE.HPP  DEBUG.HPP  DEFINE.CPP  ERROR.CPP  ERROR.HPP  EXPR.CPP  INPUT.CPP  INPUT.HPP  LICENSE.md  LIST.CPP  LIST.HPP  LISTING.CPP  LOOP.CPP  MAKEFILE  MAKEINIT  MEM.CPP  MEM.HPP  MEMTYPE.HPP  MODULE.bazel  OBJECT.HPP  OPCODES.HPP  OUTPUT.CPP  OUTPUT.HPP  (+99 more)
_posts/: 2025-03-09-welcome-to-jekyll.markdown
dev-docs/: index.md
packaging/: BUILD.bazel
rules/: sc.bzl  sci.bzl
sci_lib/: README.md
sci_lib/sci_1_1/: BUILD.bazel  kernel.sh  keys.sh  sci.sh  system.sh
scic/: BUILD.bazel  alist.cpp  alist.hpp  anode.cpp  anode.hpp  anode_impls.cpp  anode_impls.hpp  asm.cpp  asm.hpp  banner.cpp  builtins.cpp  builtins.hpp  casts.hpp  chartype.cpp  class.cpp  class.hpp  common.hpp  compile.cpp  compile.hpp  compiler.cpp  compiler.hpp  config.cpp  config.hpp  debug_utils.hpp  define.cpp  define.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  fixup_list.cpp  fixup_list.hpp  global_compiler.cpp  global_compiler.hpp  input.cpp  list.cpp  list.hpp  listing.cpp  listing.hpp  loop.cpp  (+45 more)
scic/codegen/: BUILD.bazel  alist.hpp  anode.cpp  anode.hpp  anode_impls.cpp  anode_impls.hpp  code_generator.cpp  code_generator.hpp  common.hpp  compiler.cpp  compiler.hpp  fixup_list.cpp  fixup_list.hpp  list.cpp  list.hpp  listing.cpp  listing.hpp  opcodes.hpp  optimize.cpp  optimize.hpp  output.hpp  target.cpp  target.hpp  text_sink.cpp  text_sink.hpp  varlist.cpp  varlist.hpp
scic/diagnostics/: BUILD.bazel  diagnostics.cpp  diagnostics.hpp  formatter.cpp  formatter.hpp
scic/frontend/: BUILD.bazel  flags.cpp  flags.hpp  scic.cpp
scic/io/: BUILD.bazel  buffer.cpp  buffer.hpp  buffer_test.cpp
scic/legacy/: BUILD.bazel  README.md  banner.cpp  builtins.cpp  chartype.cpp  class.cpp  class.hpp  compile.cpp  config.cpp  define.cpp  define.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  global_compiler.cpp  global_compiler.hpp  input.cpp  input.hpp  loop.cpp  object.cpp  object.hpp  output.cpp  output.hpp  parse.cpp  parse_class.cpp  parse_class.hpp  parse_context.cpp  parse_context.hpp  parse_object.cpp  parse_object.hpp  pnode.cpp  pnode.hpp  proc.cpp  proc.hpp  public.hpp  resource.cpp  resource.hpp  sc.cpp  selector.cpp  (+14 more)
scic/parsers/: BUILD.bazel  include_context.cpp  include_context.hpp
scic/parsers/combinators/: BUILD.bazel  combinators.hpp  combinators_test.cpp  internal_util.hpp  parse_func.hpp  results.hpp  status.hpp
scic/parsers/list_tree/: BUILD.bazel  ast.cpp  ast.hpp  ast_matchers.hpp  ast_matchers_test.cpp  parser.cpp  parser.hpp  parser_test.cpp  parser_test_tool.cpp  parser_test_utils.cpp  parser_test_utils.hpp
scic/parsers/sci/: BUILD.bazel  ast.cpp  ast.hpp  ast_test.cpp  const_value_parsers.cpp  const_value_parsers.hpp  expr_parsers.cpp  expr_parsers.hpp  item_parsers.cc  item_parsers.cpp  item_parsers.h  item_parsers.hpp  item_parsers_test.cpp  parser.cpp  parser.hpp  parser_common.cpp  parser_common.hpp  parser_test.cpp  parser_test_tool.cpp
scic/sem/: BUILD.bazel  class_table.cpp  class_table.hpp  class_table_test.cpp  code_builder.cpp  code_builder.hpp  common.hpp  extern_table.cpp  extern_table.hpp  input.hpp  late_bound.hpp  module_env.cpp  module_env.hpp  obj_members.hpp  object_table.cpp  object_table.hpp  proc_table.cpp  proc_table.hpp  property_list.cpp  property_list.hpp  public_table.cpp  public_table.hpp  selector_table.cpp  selector_table.hpp  selector_table_test.cpp  symbol.cpp  symbol.hpp  test_helpers.hpp  var_table.cpp  var_table.hpp  var_table_test.cpp
scic/sem/exprs/: BUILD.bazel  expr_builder.cpp  expr_builder.hpp  expr_context.cpp  expr_context.hpp
scic/sem/passes/: BUILD.bazel  README.md  build_code.cpp  build_code.hpp  initial_pass.cpp  initial_pass.hpp
scic/status/: BUILD.bazel  status.hpp
scic/text/: BUILD.bazel  text_range.cpp  text_range.hpp
scic/tokenizer/: BUILD.bazel  char_stream.cpp  char_stream.hpp  char_stream_test.cpp  text_contents.cpp  text_contents.hpp  token.cpp  token.hpp  token_readers.cpp  token_readers.hpp  token_readers_test.cpp  token_stream.hpp  token_test_utils.hpp
scic/tokens/: BUILD.bazel  char_stream.cpp  char_stream.hpp  char_stream_test.cpp  token.cpp  token.hpp  token_readers.cpp  token_readers.hpp  token_readers_test.cpp  token_source.cpp  token_source.hpp  token_stream.hpp  token_test_utils.hpp
site/: Gemfile  (+2 more)
src/: BUILD.bazel  alist.cpp  alist.hpp  anode.cpp  anode.hpp  asm.cpp  asm.hpp  banner.cpp  banner.hpp  builtins.cpp  builtins.hpp  casts.hpp  chartype.cpp  chartype.hpp  class.cpp  compile.cpp  compile.hpp  compiler.hpp  config.cpp  config.hpp  debug.hpp  debug_utils.hpp  define.cpp  define.hpp  error.cpp  error.hpp  expr.cpp  fileio.cpp  fileio.hpp  getargs.cpp  getargs.hpp  input.cpp  input.hpp  jeff.hpp  list.cpp  list.hpp  listing.cpp  listing.hpp  loop.cpp  mem.hpp  (+35 more)
src/io/: BUILD.bazel  buffer.cpp  buffer.hpp  buffer_test.cpp
tests/minimal/: .gitignore  BUILD.bazel  game.sh  helper.sc  main.sc  main.sc.sl  selector  test.sh
toolchain/: BUILD.bazel  toolchain.bzl
util/: BUILD.bazel  choice.hpp  choice_matchers.hpp  choice_matchers_test.cpp  choice_test.cpp
util/debug/: BUILD.bazel  debug_utils.hpp
util/io/: BUILD.bazel  buffer.cpp  buffer_test.cpp  printer.hpp
util/macros/: BUILD.bazel  for_each.hpp
util/platform/: BUILD.bazel  platform.cpp  platform.hpp
util/status/: BUILD.bazel  result.hpp  result_test.cpp  status_macros.hpp  status_matchers.hpp
util/strings/: BUILD.bazel  ref_str.cpp  ref_str.hpp  ref_str_test.cpp
util/types/: BUILD.bazel  any_storage.hpp  any_storage_test.cpp  choice.hpp  choice_matchers.hpp  choice_matchers_test.cpp  choice_test.cpp  forward_ref.hpp  name.hpp  name_test.cpp  opt.hpp  opt_test.cpp  overload.hpp  sequence.hpp  sequence_test.cpp  strong_types.hpp  strong_types_test.cpp  tmpl.hpp  tmpl_test.cpp  view.hpp  view_test.cpp
(+7 files in other folders)
