# Visibility for targets only in this module.
package_group(
    name = "internal",
    packages = ["//..."],
)

alias(
    name = "scic",
    actual = "//scic",
    visibility = ["//visibility:public"],
)

alias(
    name = "sci_system_1_1",
    actual = "//sci_lib/sci_1_1",
    visibility = ["//visibility:public"],
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)
