# Rules for building packaged artifacts, for binary distribution.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "pkg_filegroup")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pkg_files(
    name = "bin_files",
    srcs = ["//scic/frontend:scic"],
    attributes = pkg_attributes(
        mode = "0755",
    ),
    prefix = "bin",
    renames = {
        '//scic/frontend:scic': 'scinc',
    },
)

pkg_filegroup(
    name = "inc_files",
    srcs = [
        "//sci_lib/sci_1_1:pkg_inc_files",
    ],
    prefix = "include",
)

pkg_tar(
    name = "scinc_tar",
    srcs = [
        ":bin_files",
        ":inc_files",
    ],
    extension = "tgz",
    out = "scinc.tgz",
)

pkg_zip(
    name = "scinc_zip",
    srcs = [
        ":bin_files",
        ":inc_files",
    ],
    out = "scinc.zip",
)
