package(
    default_visibility = [":scic_internal"],
)

package_group(
    name = "scic_internal",
    packages = [
        "//scic/...",
    ],
)

cc_library(
    name = "config",
    srcs = ["config.cpp"],
    hdrs = ["config.hpp"],
)

cc_library(
    name = "symtypes",
    hdrs = ["symtypes.hpp"],
)

cc_library(
    name = "text",
    srcs = ["text.cpp"],
    hdrs = ["text.hpp"],
)

cc_library(
    name = "varlist",
    srcs = ["varlist.cpp"],
    hdrs = ["varlist.hpp"],
    deps = [":symtypes"],
)

cc_library(
    name = "input",
    srcs = ["input.cpp"],
    hdrs = ["input.hpp"],
    deps = [
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "common",
    hdrs = ["common.hpp"],
)

cc_library(
    name = "resource",
    srcs = ["resource.cpp"],
    hdrs = ["resource.hpp"],
    deps = [
        ":common",
        ":memtype",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "memtype",
    hdrs = ["memtype.hpp"],
)

cc_library(
    name = "casts",
    hdrs = ["casts.hpp"],
)

cc_library(
    name = "list",
    srcs = ["list.cpp"],
    hdrs = ["list.hpp"],
    deps = [":casts"],
)

cc_library(
    name = "output",
    srcs = ["output.cpp"],
    hdrs = ["output.hpp"],
    deps = [
        ":common",
        ":config",
        ":memtype",
        ":resource",
        "//util/platform",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "opcodes",
    hdrs = ["opcodes.hpp"],
)

cc_library(
    name = "listing",
    srcs = ["listing.cpp"],
    hdrs = ["listing.hpp"],
    deps = [
        ":common",
        ":config",
        ":opcodes",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_binary(
    name = "scic",
    srcs = [
        "alist.cpp",
        "alist.hpp",
        "anode.cpp",
        "anode.hpp",
        "asm.cpp",
        "asm.hpp",
        "banner.cpp",
        "banner.hpp",
        "builtins.cpp",
        "builtins.hpp",
        "class.cpp",
        "class.hpp",
        "compile.cpp",
        "compile.hpp",
        "compiler.cpp",
        "compiler.hpp",
        "debug_utils.hpp",
        "define.cpp",
        "define.hpp",
        "error.cpp",
        "error.hpp",
        "expr.cpp",
        "expr.hpp",
        "global_compiler.cpp",
        "global_compiler.hpp",
        "loop.cpp",
        "loop.hpp",
        "object.cpp",
        "object.hpp",
        "optimize.cpp",
        "optimize.hpp",
        "parse.cpp",
        "parse.hpp",
        "parse_class.cpp",
        "parse_class.hpp",
        "parse_context.cpp",
        "parse_context.hpp",
        "parse_object.cpp",
        "parse_object.hpp",
        "pnode.cpp",
        "pnode.hpp",
        "proc.cpp",
        "proc.hpp",
        "public.cpp",
        "public.hpp",
        "reference.hpp",
        "resource.cpp",
        "resource.hpp",
        "sc.cpp",
        "sc.hpp",
        "selector.cpp",
        "selector.hpp",
        "share.cpp",
        "share.hpp",
        "symbol.cpp",
        "symbol.hpp",
        "symtbl.cpp",
        "symtbl.hpp",
        "token.cpp",
        "token.hpp",
        "toktypes.cpp",
        "toktypes.hpp",
        "update.cpp",
        "update.hpp",
        "vocab.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":casts",
        ":chartype",
        ":common",
        ":config",
        ":input",
        ":list",
        ":listing",
        ":memtype",
        ":opcodes",
        ":output",
        ":symtypes",
        ":text",
        ":varlist",
        "//util/platform",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/debugging:failure_signal_handler",
        "@abseil-cpp//absl/debugging:stacktrace",
        "@abseil-cpp//absl/debugging:symbolize",
        "@abseil-cpp//absl/functional:any_invocable",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@argparse",
    ],
)

cc_library(
    name = "chartype",
    srcs = ["chartype.cpp"],
    hdrs = ["chartype.hpp"],
)
