cc_binary(
    name = "sc",
    srcs = glob([
        "*.cpp",
        "*.hpp",
    ]),
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/debugging:symbolize",
        "@abseil-cpp//absl/debugging:failure_signal_handler",
        "@argparse//:argparse",
    ],
    visibility = ["//visibility:public"],
)
