cc_library(
    name = "platform",
    srcs = ["platform.cpp"],
    hdrs = ["platform.hpp"],
    visibility = ["//src:__subpackages__"],
)

cc_binary(
    name = "sc",
    srcs = glob(
        [
            "*.cpp",
            "*.hpp",
        ],
        exclude = [
            "platform.cpp",
            "platform.hpp",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":platform",
        "//src/io:buffer",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/debugging:stacktrace",
        "@abseil-cpp//absl/debugging:failure_signal_handler",
        "@abseil-cpp//absl/debugging:symbolize",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@argparse",
    ],
)
