load(":toolchain.bzl", "compiled_toolchain_config")

compiled_toolchain_config(
    name = "compiled_sci_toolchain_config",
    scic = "//scic/legacy:scic",
    systems = [
        "//sci_lib/sci_1_1",
    ],
)

compiled_toolchain_config(
    name = "updated_sci_toolchain_config",
    scic = "//scic/frontend:scic",
    systems = [
        "//sci_lib/sci_1_1",
    ],
)

toolchain(
    name = "compiled_sci_compiler_toolchain",
    toolchain = ":compiled_sci_toolchain_config",
    toolchain_type = "@rules_sci//sci/toolchains:toolchain_type",
)

toolchain(
    name = "updated_sci_compiler_toolchain",
    toolchain = ":updated_sci_toolchain_config",
    toolchain_type = "@rules_sci//sci/toolchains:toolchain_type",
)
