package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "choice",
    hdrs = ["choice.hpp"],
)

cc_test(
    name = "choice_test",
    srcs = ["choice_test.cpp"],
    deps = [
        ":choice",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
