# Libraries for generating SCI compiled code.

package(default_visibility = ["//scic:scic_internal"])

cc_library(
    name = "anode",
    srcs = [
        "anode.cpp",
        "anode_impls.cpp",
        "optimize.cpp",
    ],
    hdrs = [
        "alist.hpp",
        "anode.hpp",
        "anode_impls.hpp",
        "optimize.hpp",
    ],
    deps = [
        "//scic:common",
        "//scic:config",
        "//scic:list",
        "//scic:listing",
        "//scic:opcodes",
        "//scic:output",
        "//util/types:casts",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "fixup_list",
    srcs = ["fixup_list.cpp"],
    hdrs = ["fixup_list.hpp"],
    deps = [
        ":anode",
        "//scic:listing",
        "//scic:output",
    ],
)

cc_library(
    name = "code_generator",
    srcs = ["code_generator.cpp"],
    hdrs = [
        "code_generator.hpp",
    ],
    deps = [
        ":anode",
        ":fixup_list",
        "//scic:common",
        "//scic:config",
        "//scic:input",
        "//scic:listing",
        "//scic:opcodes",
        "//scic:output",
        "//util/types:choice",
        "//util/types:forward_ref",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
