# Libraries for generating SCI compiled code.
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//scic:scic_internal"])

cc_library(
    name = "common",
    hdrs = ["common.hpp"],
)

cc_library(
    name = "anode",
    srcs = [
        "anode.cpp",
        "anode_impls.cpp",
        "optimize.cpp",
    ],
    hdrs = [
        "alist.hpp",
        "anode.hpp",
        "anode_impls.hpp",
        "optimize.hpp",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":common",
        ":list",
        ":listing",
        ":opcodes",
        ":output",
        ":target",
        "//util/types:casts",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "fixup_list",
    srcs = ["fixup_list.cpp"],
    hdrs = ["fixup_list.hpp"],
    visibility = ["//visibility:private"],
    deps = [
        ":anode",
        ":listing",
        ":output",
    ],
)

cc_library(
    name = "target",
    srcs = ["target.cpp"],
    hdrs = ["target.hpp"],
    visibility = ["//visibility:private"],
    deps = [
        ":listing",
        ":output",
    ],
)

cc_library(
    name = "output",
    hdrs = ["output.hpp"],
)

cc_library(
    name = "list",
    srcs = ["list.cpp"],
    hdrs = ["list.hpp"],
    visibility = ["//visibility:private"],
    deps = [
        "//util/types:casts",
    ],
)

cc_library(
    name = "text_sink",
    srcs = ["text_sink.cpp"],
    hdrs = ["text_sink.hpp"],
    deps = ["@abseil-cpp//absl/strings:str_format"],
)

cc_library(
    name = "opcodes",
    hdrs = ["opcodes.hpp"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "listing",
    srcs = ["listing.cpp"],
    hdrs = ["listing.hpp"],
    visibility = ["//visibility:private"],
    deps = [
        ":opcodes",
        ":text_sink",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/strings:string_view",
    ],
)

cc_library(
    name = "code_generator",
    srcs = ["code_generator.cpp"],
    hdrs = [
        "code_generator.hpp",
    ],
    deps = [
        ":anode",
        ":common",
        ":fixup_list",
        ":listing",
        ":opcodes",
        ":output",
        ":target",
        ":text_sink",
        "//util/types:choice",
        "//util/types:forward_ref",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
