package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "diagnostics",
    srcs = ["diagnostics.cpp"],
    hdrs = ["diagnostics.hpp"],
    deps = [
        "//scic/text:text_range",
        "//scic/tokens:token_source",
        "//util/types:name",
        "//util/types:strong_types",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
