# Libraries for semantic analysis of SCI scripts.

package(
    default_visibility = ["//scic:scic_internal"],
)

cc_library(
    name = "common",
    hdrs = ["common.hpp"],
    deps = [
        "//scic/parsers/sci:ast",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "late_bound",
    hdrs = ["late_bound.hpp"],
)

cc_library(
    name = "symbol",
    srcs = ["symbol.cpp"],
    hdrs = ["symbol.hpp"],
    deps = [
        "//util/strings:ref_str",
        "//util/types:choice",
        "//util/types:strong_types",
    ],
)

cc_library(
    name = "module_env",
    hdrs = ["module_env.hpp"],
    deps = [
        ":symbol",
        "//util/strings:ref_str",
        "//util/types:choice",
    ],
)

cc_library(
    name = "selector_table",
    srcs = ["selector_table.cpp"],
    hdrs = ["selector_table.hpp"],
    deps = [
        ":late_bound",
        "//scic/parsers/sci:ast",
        "//util/strings:ref_str",
        "@abseil-cpp//absl/status",
    ],
)
